--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.17.9",
     "@sanity/client": "^2.23.2",
     "@sanity/image-url": "^1.0.1",
+    "@sendgrid/mail": "^8.1.0",
     "@stripe/stripe-js": "^1.25.0",
     "canvas-confetti": "^1.5.1",
     "next": "12.1.0",
