--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sendgrid/mail": "^8.1.0",
     "@stripe/stripe-js": "^1.25.0",
     "canvas-confetti": "^1.5.1",
+    "micro": "^10.0.1",
     "next": "12.1.0",
     "next-sanity-image": "^3.2.1",
     "react": "17.0.2",
